Http service discovery + WebClient